# django_admin_inline_test_problem

./: .gitignore  README.md  man  manage.py  pyproject.toml  pytest.ini
inline_problem/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  models.py  signals.py  tests.py
users/migrations/: 0001_initial.py  0002_login_login_email_domain_idx.py  0003_alter_login_managers_alter_login_user.py
